--- a/live/web/index.html
+++ b/live/web/index.html
@@ -351,10 +351,10 @@
   }
 //  var currentLocation = window.location.search;
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
-var sLive = "https://scontent.fcgk18-1.fna.fbcdn.net/hvideo-odn-cln/_nc_cat-103/_nc_sr_t-4/v/rASeAT9T4lWmcV3dbCYNPwUksph6vKhHUFN_0a5WoQ3swGQ/_nc_ohc-ND86h529HG0Q7kNvgF_HiAZ/live-dash/dash-abr-ibr-audio/122146527350322859.mpd?ccb=2-4&ms=m_CTPA&sc_t=1&oh=00_AYA9niwZxtB1G5bP-GM0CSVhr6zFAOiGI8bc9v5NqXgnuw&oe=6740C699"; 
+var sLive = "//scontent.fcgk18-1.fna.fbcdn.net/hvideo-odn-cln/_nc_cat-103/_nc_sr_t-4/v/rASeAT9T4lWmcV3dbCYNPwUksph6vKhHUFN_0a5WoQ3swGQ/_nc_ohc-ND86h529HG0Q7kNvgF_HiAZ/live-dash/dash-abr-ibr-audio/122146527350322859.mpd?ccb=2-4&ms=m_CTPA&sc_t=1&oh=00_AYA9niwZxtB1G5bP-GM0CSVhr6zFAOiGI8bc9v5NqXgnuw&oe=6740C699"; 
   var source = {
    //progressive:"//ythls-v3.onrender.com/channel/UCXG2TDm-8g-Yh8Q6I3GVeqg.m3u8",
-    dash : sLive 
+    Dash : sLive 
     //poster:"//raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   
