--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -5,9 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
-  <!--
-  <meta http-equiv="refresh" content="0; url=https://google.com">
-  -->
+  <meta http-equiv="refresh" content="0; url=https://donelfantastic.github.io">
   <meta http-equiv="cache-control" content="max-age=0">
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="expires" content="0">
@@ -80,22 +78,6 @@
       <div id="wrapper">
 <a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
 <a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span></div> 
-      <div class="table-area">
-        <div id="display-number"></div>
-        <div class="df_Info" style="margin: 15px;padding:0px;">
-  <span style="background:#ff0000;font-size:18px;border-radius:5px 0px 0px 5px;padding:0px 10px;color:#ffffff;position:absolute;text-align:center;line-height:35px;"><i class="fa fa-cog fa-spin"></i></span>
-  <marquee scrollamount="3" direction="left" onmouseover="stop()" onmouseout="start()" style="font-size:14px;font-weight:bold;text-transform: uppercase;color:white;display:block;margin-left:40px;line-height:35px;">Welcome back to Donelfantastic! Have any issue problems? Feel free to contact/message at Official social media. Thank you and Happy watching!</marquee>
-        </div>
-        <div id="display-number"></div>
-          <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
-        </div>
-<!--//
-<div id="form-div2">
-<h5 class="df_feedback">FEEDBACK</h5>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/" data-numposts="5" data-width="100%"></div>
-<div id="fb-root-embed"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0&appId=240273417408288&autoLogAppEvents=1" nonce="MM76ErFa"></script></div>
-//-->      
       </section>
   </div> 
   
