--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -5,9 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantstic Official</title>
-  <!--
-  <meta http-equiv="refresh" content="0; url=https://google.com">
-  -->
+  <meta http-equiv="refresh" content="0; url=https://donelfantastic.github.io">
   <meta http-equiv="cache-control" content="max-age=0">
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="expires" content="0">
