--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
+  <!--//
   <meta http-equiv="refresh" content="0; url=https://donelfantastic.github.io">
+ //-->
   <meta http-equiv="cache-control" content="max-age=0">
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="expires" content="0">
@@ -73,7 +75,7 @@
   </nav>
   </div>
   <div class="container-fluid"></div>
-    <h5 class="df_title">DONEL<span>TV</span></h5>
+    <h5 class="df_title">DONEL<span>ENTERTAINMENT</span></h5>
     <section class="content-area">
       <div id="wrapper">
 <a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
