--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -77,9 +77,10 @@
   <div class="container-fluid"></div>
     <h5 class="df_title">DONEL<span>ENTERTAINMENT</span></h5>
     <section class="content-area">
-      <div id="wrapper">
+    <!--// <div id="wrapper">
 <a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
-<a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span></div> 
+<a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span>
+      </div> //-->
       </section>
   </div> 
   
