--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -75,7 +75,7 @@
   </nav>
   </div>
   <div class="container-fluid"></div>
-    <h5 class="df_title">DONEL<span>ENTERTAINMENT</span></h5>
+    <h5 class="df_title">ENTERTAINMENT</h5>
     <section class="content-area">
     <!--// <div id="wrapper">
 <a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
