--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -79,7 +79,7 @@
     <section class="content-area">
     <div id="wrapper">
 <a href="#"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
-<a href="#"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span>
+<a href="./webiptv"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span>
       </div>
       </section>
   </div> 
