--- a/donel-music.html
+++ b/donel-music.html
@@ -55,7 +55,7 @@
   </nav>
   </div>
   <div class="container-playlist">
-    <h5 class="df_title">NELLA<span> KHARISMA OFFICIAL</span></h5>
+    <h5 class="df_title">NELLA<span> KHARISMA</span></h5>
 
     <div class="ypt_wrapper">
       <div class="video embed-container">
@@ -79,7 +79,7 @@
       </div>
 
       <div class="container-playlist">
-        <h5 class="df_title">DORY<span> HARSA MUSIC</span></h5>
+        <h5 class="df_title">DORY<span> HARSA</span></h5>
 
         <div class="ypt_wrapper">
           <div class="video embed-container">
