--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -21,33 +21,33 @@
   <p class="hint">DONELFANTASTIC</p>
   <nav class="nav">
     <a href="/" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_1.png" class="nav__image">
+      <img src="./assets/photo/donel_1.png" class="nav__image">
 
       <span class="nav__title" data-title="home">Home</span>
       <span class="nav__subtitle">Donelfantastic</span>
     </a>
     <a href="./donel-gallery" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_1.jpg" class="nav__image">
+      <img src="./assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
       <span class="nav__subtitle">Gallery</span>
     </a>
     <a href="./donel-music" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_3.png" class="nav__image">
+      <img src="./assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">Music</span>
     </a>
     <a href="./donel-entertainment" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage.png" class="nav__image">
+      <img src="./assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_2.png" class="nav__image">
+      <img src="./assets/photo/donel_2.png" class="nav__image">
       <span class="nav__title" data-title="disclaimer">Disclaimer</span>
       <span class="nav__subtitle">Site Disclaimer</span>
     </a>
     <a href="./donel-about-us" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_2.jpg" class="nav__image">
+      <img src="./assets/photo/onstage_2.jpg" class="nav__image">
       <span class="nav__title" data-title="about">About</span>
       <span class="nav__subtitle">About Us</span>
     </a>
@@ -96,7 +96,7 @@
   <div class="social-panel-container">
     <div class="social-panel">
       <p>Donelfantastic<i class="fa fa-copyright"></i>2023 -
-        <a target="_blank" href="https://donelfantastic.github.io">2024</a>
+        <a target="_blank" href="https://donelfantastic.github.io">2029</a>
       </p>
       <button class="close-btn"><i class="fas fa-times"></i></button>
       <h4>follow us on</h4>
