--- a/donel-music.html
+++ b/donel-music.html
@@ -11,7 +11,6 @@
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
@@ -22,33 +21,33 @@
   <p class="hint">DONELFANTASTIC</p>
   <nav class="nav">
     <a href="/" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_1.png" class="nav__image">
+      <img src="./assets/photo/donel_1.png" class="nav__image">
 
       <span class="nav__title" data-title="home">Home</span>
       <span class="nav__subtitle">Donelfantastic</span>
     </a>
     <a href="./donel-gallery" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_1.jpg" class="nav__image">
+      <img src="./assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
       <span class="nav__subtitle">Gallery</span>
     </a>
     <a href="./donel-music" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_3.png" class="nav__image">
+      <img src="./assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">Music</span>
     </a>
     <a href="./donel-entertainment" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage.png" class="nav__image">
+      <img src="./assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_2.png" class="nav__image">
+      <img src="./assets/photo/donel_2.png" class="nav__image">
       <span class="nav__title" data-title="disclaimer">Disclaimer</span>
       <span class="nav__subtitle">Site Disclaimer</span>
     </a>
     <a href="./donel-about-us" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_2.jpg" class="nav__image">
+      <img src="./assets/photo/onstage_2.jpg" class="nav__image">
       <span class="nav__title" data-title="about">About</span>
       <span class="nav__subtitle">About Us</span>
     </a>
