--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -59,7 +59,7 @@
     </a>
     <a href="./donel-entertainment" class="nav__item">
       <img src="./assets/photo/onstage.png" class="nav__image">
-      <span class="nav__title" data-title="tv">Entertainment</span>
+      <span class="nav__title" data-title="entertainment">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
@@ -78,8 +78,8 @@
     <h5 class="df_title">ENTERTAINMENT</h5>
     <section class="content-area">
     <div id="wrapper">
-<a href="#"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
-<a href="./webiptv"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span>
+<a href="./webiptv-apps"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS</button></a><span>
+<a href="./webiptv"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS 2</button></a></span>
       </div>
       </section>
   </div> 
