--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -38,7 +38,7 @@
     </a>
     <a href="./donel-entertainment" class="nav__item">
       <img src="./assets/photo/onstage.png" class="nav__image">
-      <span class="nav__title" data-title="tv">Entertainment</span>
+      <span class="nav__title" data-title="entertainment">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
