--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
     </a>
     <a href="./donel-entertainment" class="nav__item">
       <img src="./assets/photo/onstage.png" class="nav__image">
-      <span class="nav__title" data-title="tv">Entertainment</span>
+      <span class="nav__title" data-title="entertainment">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
@@ -74,7 +74,7 @@
   <div class="social-panel-container">
     <div class="social-panel">
       <p>Donelfantastic<i class="fa fa-copyright"></i>2023 -
-        <a target="_blank" href="https://donelfantastic.github.io">2024</a>
+        <a target="_blank" href="https://donelfantastic.github.io">2029</a>
       </p>
       <button class="close-btn"><i class="fas fa-times"></i></button>
       <h4>follow us on</h4>
