--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -79,7 +79,7 @@
     <section class="content-area">
     <div id="wrapper">
 <a href="./webiptv-apps"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS</button></a><span>
-<a href="./webiptv"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS 2</button></a></span>
+<a href="./webiptv-apps/native"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS 2</button></a></span>
       </div>
       </section>
   </div> 
