--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -78,8 +78,8 @@
     <h5 class="df_title">ENTERTAINMENT</h5>
     <section class="content-area">
     <div id="wrapper">
-<a href="./webiptv-apps"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS</button></a><span>
-<a href="./webiptv-apps/native"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS 2</button></a></span>
+<a href="./webiptv-apps"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS V1</button></a><span>
+<a href="./webiptv-apps/native"><button class="animated-button"><i class="fas fa-tv"></i>WEBIPTV APPS V2</button></a></span>
       </div>
       </section>
   </div> 
