--- a/donel-about-us.html
+++ b/donel-about-us.html
@@ -70,7 +70,7 @@
   
   <section class="content-area">
     <div class="table-area">
-      <h5>Donel<span>fantastic</span>,</h5>
+      <p><strong></strong>Donel<span>fantastic</span> is,</strong></p>
       <p>"A fans community of Indonesian couple singer artist, Dory Harsa & Nella Kharisma. By presenting music genres with modern dangdut, campur sari and Javanese pop genres." (─Donelfantastic)</p><br>
       <p><span>"Komunitas penggemar pasangan artis penyanyi Indonesia, Dory Harsa & Nella Kharisma. Dengan menghadirkan genre musik dengan genre dangdut modern, campur sari dan pop jawa."</span> (─Donelfantastic)</p></br>
       <div class="bob" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 75%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
