--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
-  <video class="bg-video-wrap" poster="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/assets/donelfantastic12.png" loop autoplay>
+  <video class="bg-video-wrap" poster="./assets/donelfantastic12.webp" loop autoplay>
   <source src="assets/videos/nk_flyer.mp4" type="video/mp4">
   </video>
 <body>
